A_Study/2_Kind/d8/dep-nginx.yml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-podtemp--nginxcont
  namespace: frontend
  labels:
    app: podtemp--nginxcont
spec:
  replicas: 3
  # serviceName: "nginxservice" # R: Only for statefull set.
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: podtemp--nginxcont
  template:
    metadata:
      # annotations:
      #   kubectl.kubernetes.io/default-container:  myjob
      labels:
        app: podtemp--nginxcont
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name: nginxcont
        image: nginx:latest
        imagePullPolicy: IfNotPresent # Y: NEW.
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 150m
            memory: 150Mi
        # livenessProbe:
        #   tcpSocket:
        #     port: 80
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 5
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /_status/healthz
        #     port: 80
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 2
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10
        # env:
        # - name: DB_HOST
        #   valueFrom:
        #     configMapKeyRef:
        #       name: myjob
        #       key: DB_HOST
        ports:
        - containerPort: 80
          name: myjob
      #   volumeMounts:
      #   - name: nginx-data
      #     mountPath: /usr/share/nginx/html
      # volumes:
      #   - name: nginx-data
      #     emptyDir: {} # R: {} => will create empty vol.
      restartPolicy: Always
---

# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: nginxservice
  namespace: frontend
spec:
  selector:
    app: podtemp--nginxcont   #Y :must match deployment selector.app
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
    # nodePort: 30001
---
